fixed scaling issues on small screen height

--- a/app/music/music.css
+++ b/app/music/music.css
@@ -33,10 +33,12 @@
 
 .link-grid {
     display: grid;
+    width: 100%;
+    height: 100%;
     max-width: 500px;
-    gap: 0rem;
+    max-height: 200px;
     grid-template-columns: 1fr;
-    grid-template-rows: 40% 1fr 1fr 1fr 1fr 1fr 1r 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
 .link {
@@ -56,7 +58,7 @@
 
 .link-img {
     width: 100%;
-    height: 100%;
+    max-width: 500px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -142,36 +144,12 @@
 /* breakpoint at smartphone size*/
 
 @media (max-width: 480px) {
-    .link-grid-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: center;
-        height: calc(100% - 4rem);
-    }
-
-    .link-grid {
-        grid-template-columns: 1fr;
-        grid-template-rows: 50% 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        height: 100%;
-        width: 100%;
-        max-width: 500px;
-        margin-bottom: calc(51px + 0.25rem);
-    }
 
     .link {
         grid-column: span 1;
         grid-row: span 1;
         justify-content: center;
         padding: 0.25rem 0.25rem 0.25rem 0.25rem;
-    }
-
-    .link-img {
-        grid-column: span 1;
-        grid-row: span 1;
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
     }
 }
 
